# MyApp

./: pjsip.txt  settings.gradle
app/: build.gradle
app/src/debug/res/values/: google_maps_api.xml
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Application.mk  SipCaller.cc
app/src/main/res/drawable/: app_register_status_bg.xml  bt_status_bg.xml  call_cancle.xml  date_time_bg.xml  flag_red.xml  fragment_linkman_bg.xml  fragment_message_bg.xml  fragment_message_group_select_bg.xml  fragment_setting_bg.xml  group_invitation_bg.xml  image_header.xml  login_tv_bg.xml  main_left_bg.xml  main_location_bg.xml  main_message_bg.xml  main_middle_bg.xml  main_phone_bg.xml  main_right_bg.xml  member_header_bg.xml  register_statu.xml  setting_choice_normal.xml  setting_choice_selected.xml  settings_choice_bg.xml  settings_choice_color_bg.xml  update_cancel.xml  update_down_bg.xml  update_layout_bg.xml  user_app_info_bg.xml  user_app_info_detial_bg.xml  user_info_app_add_bg.xml
app/src/main/res/layout/: about_list_view_item.xml  activity_about.xml  activity_blue_get_device_status.xml  activity_blue_get_log.xml  activity_blue_group_invitation.xml  activity_blue_set_apn.xml  activity_blue_set_geo_fence.xml  activity_blue_set_psw.xml  activity_blue_set_thresholds.xml  activity_blue_upgrade_firmware.xml  activity_call.xml  activity_conversation.xml  activity_conversation_list.xml  activity_create_group.xml  activity_device_event.xml  activity_filter.xml  activity_group_list.xml  activity_group_manager.xml  (+52 more)
charlibs/: build.gradle
charlibs/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
siplibs/: build.gradle
siplibs/src/main/: AndroidManifest.xml
test/pjsip/jni/: Android.mk  Application.mk  Cubic.cpp  cubic_configs.h  cubic_const.h  cubic_func.h  cubic_log.h  cubic_msg.h  cubic_status.h
test/pjsip/jni/framework/: CConfig.cc  CCoreWatch.cc  CFramework.cc  CLogService.h  CLogger.cc  CMessager.cc  CRemoteReport.cc  CShareStatus.cc  CShareStatusTable.h  CTimer.cc
test/pjsip/jni/util/: CAsyncRun.cc  CEvent.cc  CFileLock.cc  CLock.cc  CSafeMap.cc  CSafeQueue.cc  CStatMachine.cc  CStringTool.cc  CThread.cc  CUtil.cc
test/qq/cubic/: COPYING  Makefile.am  Makefile.in  config.h.in  configure  configure.in  cubic_configs.h  cubic_const.h  cubic_func.h  cubic_inc.h  cubic_log.h  cubic_msg.h  cubic_poweron  cubic_reboot  cubic_shutdown  cubic_status.h  start_cubic  本地编译命令.txt
test/qq/cubic/app/: Makefile.am  Makefile.in
test/qq/cubic/app/batservice/: CBatService.cc  Makefile.am  Makefile.in
test/qq/cubic/app/bleinterface/: BleInterface.cc  BleListener.cc  Makefile.am  Makefile.in
test/qq/cubic/app/bleinterface/action/: CDataObject.cc  CDataObjectTypes.h  GetApnSettings.cc  GetDeviceStatus.cc  GetGeoFence.cc  GetIntervals.cc  GetLog.cc  GetSimLockStatus.cc  GetSip.cc  GetThresholds.cc  GroupInvitation.cc  JsonInterface.cc  LockSimWithPin.cc  SetApnSettings.cc  SetGeoFence.cc  SetInterval.cc  SetPassword.cc  SetServerUrl.cc  SetSip.cc  SetThresholds.cc  Test.cc  UnlockSimWithPin.cc  UnlockSimWithPuk.cc  UpgradeFirmware.cc
test/qq/cubic/app/core/: CoreApp.cc  Makefile.am  Makefile.in
test/qq/cubic/app/demo/: CDemo.cc  Makefile.am  Makefile.in
test/qq/cubic/app/eventservice/: EventListener.cc  EventService.cc  Makefile.am
test/qq/cubic/app/lightservice/: LightControl.cc  LightService.cc  LightThread.cc  Makefile.am  light_defs.h
test/qq/cubic/app/locationservice/: CLocationService.cc  CLocationServiceCommon.h  Makefile.am  Makefile.in
test/qq/cubic/app/logservice/: CLogFile.cc  CLogNet.cc  CLogReader.cc  CLogService.cc  Makefile.am  Makefile.in
test/qq/cubic/app/networkservice/: CNetworkService.cc  Makefile.am  Makefile.in
test/qq/cubic/app/otaservice/: Makefile.am  Makefile.in  OTAService.cc
test/qq/cubic/app/powerservice/: Makefile.am  PowerService.cc
test/qq/cubic/app/sipservice/: Makefile.am  SipCaller.cc  SipService.cc
test/qq/cubic/app/soundservice/: ISoundDestination.cc  ISoundSource.cc  Makefile.am  SoundDefs.h  SoundDestinationEncOgg.cc  SoundDestinationEncoder.cc  SoundDestinationRingBuffer.cc  SoundDestinationSip.cc  SoundDevice.cc  SoundPlayer.cc  SoundRecorder.cc  SoundService.cc  SoundSourceDecoder.cc  SoundSourceRingBuffer.cc  SoundSourceSip.cc
test/qq/cubic/app/tools/: Makefile.am  Makefile.in  cmmd.cc  cshutdown.cc  getevent.cc  read_comm.cc
test/qq/cubic/app/ulocationservice/: Makefile.am  Makefile.in  ULocationService.cc
test/qq/cubic/app/vmservice/: DownloadThread.cc  Makefile.am  UploadThread.cc  VMService.cc
test/qq/cubic/app/watchdog/: CWatchDog.cc  Makefile.am  Makefile.in
test/qq/cubic/cfg/ro/core/: version_num
test/qq/cubic/cfg/ro/log/: net_addr
test/qq/cubic/cfg/ro/watch/init/02_pwrd/: command
test/qq/cubic/cfg/ro/watch/init/03_netd/: command
test/qq/cubic/cfg/ro/watch/init/04_ulocd/: command
test/qq/cubic/cfg/ro/watch/init/05_batd/: command  name
test/qq/cubic/cfg/ro/watch/init/07_otad/: command  name
test/qq/cubic/cfg/ro/watch/init/09_lightd/: name
test/qq/cubic/cfg/ro/watch/init/10_sndd/: name
test/qq/cubic/cfg/ro/watch/init/11_vmd/: command  name
test/qq/cubic/cfg/ro/watch/init/12_sipd/: command
test/qq/cubic/cfg/ro/watch/init/99_core/: command
test/qq/cubic/cfg/rw/core/push/: server_url
test/qq/cubic/cfg/rw/sip/stun/2/: addr
test/qq/cubic/cfg/rw/update/: jsonpath  max_file_size
test/qq/cubic/framework/: CAbsTimer.cc  CConfig.cc  CCoreWatch.cc  CCoreWatch.h  CFramework.cc  CLogService.h  CLogger.cc  CMessager.cc  CRemoteReport.cc  CShareStatus.cc  CShareStatusTable.h  CTimer.cc  Makefile.am  Makefile.in
test/qq/cubic/libs/nmealib/: Makefile.am  Makefile.in  config.h.in  configure  configure.in
test/qq/cubic/util/: CAsyncRun.cc  CClientSocket.cc  CEvent.cc  CFactory.cc  CFileLock.cc  CForecast.cc  CLock.cc  CProductor.cc  CRingBuffer.cc  CSafeMap.cc  CSafeQueue.cc  CServerSocket.cc  CStatMachine.cc  CStringTool.cc  CTcpConnection.cc  CTcpMessager.cc  CTcpServer.cc  CThread.cc  CUtil.cc  CValuePackage.cc  DebugHelper.cc  Makefile.am  Makefile.in
(+286 files in other folders)
