EXTRA_DIST = CClientSocket.cc \
            CEvent.cc \
            CFactory.cc \
            CFileLock.cc \
            CLock.cc \
            CProductor.cc \
            CRingBuffer.cc \
            CSafeMap.cc \
            CSafeQueue.cc \
            CServerSocket.cc \
            CStatMachine.cc \
            CStringTool.cc \
            CTcpConnection.cc \
            CTcpMessager.cc \
            CTcpServer.cc \
            CThread.cc \
            CUtil.cc \
            CValuePackage.cc
