AUTOMAKE_OPTIONS = foreign
AM_CPPFLAGS = -g -Wall -Werror -I$(top_srcdir) -I$(top_srcdir)/framework -I$(top_srcdir)/util
AM_CFLAGS = -g -Wall -Werror -I$(top_srcdir) -I$(top_srcdir)/framework -I$(top_srcdir)/util 
AM_LDFLAGS = -pthread -lrt -rdynamic
bin_PROGRAMS = cubic-pwrd
cubic_pwrd_SOURCES = PowerService.cc

