# Makefile.am - Automake script for cubic
#
AUTOMAKE_OPTIONS = foreign

AM_CFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES=libnmea.la
libnmea_la_SOURCES = \
    src/context.c \
    src/generate.c \
    src/generator.c \
    src/gmath.c \
    src/info.c \
    src/parse.c \
    src/parser.c \
    src/sentence.c \
    src/time.c \
    src/tok.c
